# OpenDMARC

./: .editorconfig  .gitignore  AutoBuild.sh  CHANGES-202605.md  CHANGES-develop.md  CONTRIBUTING  HowToRelease  INSTALL  LICENSE  Makefile.am  New-File  PLATFORM_NOTES  README  README.md  README.specs.html  RELEASE_NOTES  TESTS  TODO  aclocal.m4  announcement  build-config.h.in  conf_refcnt  configure.ac  copyright-check
.github/workflows/: ci.yml
SECURITY/: CVE-2019-13678  CVE-2019-16378  CVE-2019-20790  CVE-2019-20970  CVE-2020-12272  CVE-2020-12460  CVE-2021-34555  Uh-Oh.txt
build-aux/: .gitignore  README
contrib/: Makefile.am  README  dmarc-pct-survey.pl  dmarc-psd-survey.pl  opendmarc-reports.conf.sample  opendmarc-run  opendmarc-run.conf.sample
contrib/init/: Makefile.am
contrib/init/generic/: Makefile.am  opendmarc
contrib/init/redhat/: .gitignore  Makefile.am  opendmarc.in
contrib/rddmarc/: Makefile.am  README  README.rddmarc  dmarcfail.py  mkdmarc  mysql_ip6.c  rddmarc
contrib/service/: .gitignore  Makefile.am  opendmarc.service.in
contrib/spec/: .gitignore  Makefile.am  opendmarc.spec.in
contrib/sqlite/: README.md  opendmarc-expire  opendmarc-import  opendmarc-params  opendmarc-reports  schema.sqlite
db/: Makefile.am  README.schema  README.update-db-schema.mysql  schema.mysql  schema.postgresql  update-db-schema.mysql
docs/: .gitignore  LICENSE  Makefile.am  README  draft-dmarc-base-00-00.txt  draft-dmarc-base-00-01.txt  draft-dmarc-base-00-02.txt  draft-dmarc-base-00-03.txt  draft-dmarc-base-00.txt  draft-dmarc-base-00.xml  draft-dmarc-base-01.txt  draft-dmarc-base-03.txt  draft-dmarc-base-04.txt  draft-dmarc-base-05.txt  draft-dmarc-base-06.txt  draft-dmarc-base-07.txt  draft-dmarc-base-08.txt  draft-dmarc-base-09.txt  draft-dmarc-base-10.txt  draft-dmarc-base-11.txt  draft-dmarc-base-12.txt  draft-dmarc-base-13.txt  draft-dmarc-base.xml  draft-kucherawy-dmarc-base-02.txt  rfc7489.txt
libopendmarc/: .gitignore  Makefile.am  dmarc.h  dmarc.h.in  libopendmarc.h  opendmarc_dns.c  opendmarc_hash.c  opendmarc_internal.h  opendmarc_policy.c  opendmarc_spf.c  opendmarc_spf_dns.c  opendmarc_strl.c  opendmarc_strl.h  opendmarc_tld.c  opendmarc_util.c  opendmarc_xml.c
libopendmarc/docs/: Makefile.am  dmarc_policy_t.html  index.html  opendmarc_dns_fake_record.html  opendmarc_get_policy_to_enforce.html  opendmarc_lib_t.html  opendmarc_policy_connect_clear.html  opendmarc_policy_connect_init.html  opendmarc_policy_connect_rset.html  opendmarc_policy_connect_shutdown.html  opendmarc_policy_fetch_adkim.html  opendmarc_policy_fetch_alignment.html  opendmarc_policy_fetch_aspf.html  opendmarc_policy_fetch_fo.html  opendmarc_policy_fetch_p.html  opendmarc_policy_fetch_pct.html  opendmarc_policy_fetch_rf.html  opendmarc_policy_fetch_rua.html  opendmarc_policy_fetch_ruf.html  opendmarc_policy_fetch_sp.html  opendmarc_policy_fetch_utilized_domain.html  opendmarc_policy_library_init.html  opendmarc_policy_library_shutdown.html  opendmarc_policy_parse_dmarc.html  opendmarc_policy_query_dmarc.html  opendmarc_policy_status_to_str.html  opendmarc_policy_store_dkim.html  opendmarc_policy_store_dmarc.html  opendmarc_policy_store_from_domain.html  opendmarc_policy_store_spf.html  opendmarc_policy_to_buf.html  opendmarc_spf_test.html  opendmarc_status_t.html  opendmarc_tld_read_file.html  opendmarc_tld_shutdown.html  opendmarc_util_clearargv.html  opendmarc_xml.html  opendmarc_xml_parse.html  overview.html
libopendmarc/tests/: .gitignore  Makefile.am  test_alignment.c  test_arcares.c  test_dmarc_fetch.c  test_dmarc_parse.c  test_dns_lookup.c  test_finddomain.c  test_parse_to_buf.c  test_spf.c  test_spf_parse.c  test_subdomain_fallback.c  test_tld.c  test_xml_parse  test_xml_parse.c
libopendmarc/tests/testfiles/: 126.com!example.com!1337270400!1337356799.20120518126.xml  163.com!example.com!1337270400!1337356799.20120518163.xml  Makefile.am  bad.com!example.com!1337140800!1337227200.xml  yeah.net!example.com!1337270400!1337356799.20120518.xml
opendmarc/: .gitignore  Makefile.am  README  config.c  config.h  opendmarc-ar.c  opendmarc-ar.h  opendmarc-arcares.c  opendmarc-arcares.h  opendmarc-arcseal.c  opendmarc-arcseal.h  opendmarc-check.8.in  opendmarc-check.c  opendmarc-config.h  opendmarc-dstring.c  opendmarc-dstring.h  opendmarc-spf-parse.c  opendmarc-spf-parse.h  opendmarc.8.in  opendmarc.c  opendmarc.conf.5.in  opendmarc.conf.sample  opendmarc.h  parse-tests.c  parse.c  parse.h  test.c  test.h  util.c  util.h
opendmarc/tests/: Makefile.am  t-verify-authservid-jobid  t-verify-authservid-jobid.conf  t-verify-authservid-jobid.lua  t-verify-multi-from-fail  t-verify-multi-from-fail.lua  t-verify-multi-from-malformed  t-verify-multi-from-malformed.lua  t-verify-multi-from-pass  t-verify-multi-from-pass.lua  t-verify-multi-from-reject  t-verify-multi-from-reject.conf  t-verify-multi-from-reject.lua  t-verify-nodata  t-verify-nodata-reject  t-verify-nodata-reject.conf  t-verify-nodata-reject.lua  t-verify-nodata.conf  t-verify-nodata.lua  t-verify-received-spf-bad  t-verify-received-spf-bad.conf  t-verify-received-spf-bad.lua  t-verify-received-spf-good  t-verify-received-spf-good.lua  t-verify-self-spf  t-verify-self-spf.conf  t-verify-self-spf.lua  t-verify-unspec  t-verify-unspec.conf  t-verify-unspec.lua
reports/: .gitignore  Makefile.am  README  mkdb.mysql  opendmarc-expire.8.in  opendmarc-expire.in  opendmarc-import.8.in  opendmarc-import.in  opendmarc-importstats  opendmarc-importstats.8.in  opendmarc-importstats.in  opendmarc-params.8.in  opendmarc-params.in  opendmarc-reports.8.in  opendmarc-reports.in
www/: index.html
