# Copyright (c) 2012, 2013, 2016, The Trusted Domain Project.
#   All rights reserved.

AUTOMAKE_OPTIONS = foreign

dist_doc_DATA = README

dist_sbin_SCRIPTS = opendmarc-expire opendmarc-import opendmarc-importstats \
	opendmarc-params opendmarc-reports

dist_man_MANS = opendmarc-expire.8 opendmarc-import.8 opendmarc-params.8 \
	opendmarc-reports.8 opendmarc-importstats.8
